[package]
name = "config-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.23", default-features = true}
env_logger = "0.10"
gitlab = "=0.1604.0"
log = "0.4"
serde = "1"
rand = "0.8"
egui_graphs = "0.15"
petgraph = "0.6"
serde_json = "1"
base64 = "0.21"
semver = { version = "1.0", features = ["serde"] }
array_tool = "1"